sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:21: error: not found: value e
} while(ecart>1 || e )
                   ^